lightbox: close button fixed except on mobile

--- a/components/lightbox/stylesheets/lightbox.styl
+++ b/components/lightbox/stylesheets/lightbox.styl
@@ -304,7 +304,7 @@ body.is-lightbox
 
 .lightbox--close
   display block
-  position absolute
+  position fixed
   top 12px
   right 20px
   font-size 24px
@@ -351,8 +351,8 @@ body.is-lightbox
       padding 0
 
   .lightbox--close
-    top 4px
-    right 4px
+    top 0
+    right 0
 
   .directional-arrows--left
     left 1%
@@ -418,6 +418,9 @@ body.is-lightbox
             top -215px
             left 50%
             margin-left -162px
+  
+  .lightbox--close
+    position absolute
 
 @media (max-width:500px)
   .lightbox__content
